--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,10 +5,10 @@
   </head>
   <body>
     <ul>
-    {{#each users}}
+    {{#each parents}}
        <a href='/profile/{{id}}'><li>My name is {{name}}, and my email is {{email}}</li></a>
     {{/each}}
-    <a href="/form">Make a Profile</a>
+    <a href="user/new">Make a Profile</a>
     </ul>
   </body>
 </html>
