--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,6 +1,6 @@
 <h1>Profile</h1>
 
-{{#each users}}
+{{#each parents}}
 This is my ID: {{id}}<br>
 This is my name: {{name}}<br>
 This is my email: {{email}}<br>
