--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,7 +8,7 @@
     {{#each parents}}
        <a href='/profile/{{id}}'><li>My name is {{name}}, and my email is {{email}}</li></a>
     {{/each}}
-    <a href="user/new">Make a Profile</a>
+    <a href="/newUser">Make a Profile</a>
     </ul>
   </body>
 </html>
