--- a/views/newUserForm.hbs
+++ b/views/newUserForm.hbs
@@ -1,13 +1,8 @@
 <h2>New User</h2>
 
-<form action="/user/new" method="post">
+<form action="/" method="post">
   <input type="text" name="name" placeholder="your name here" />
   <input type="text" name="email" placeholder="your email here" />
   <input type="text" name="star_sign" placeholder="your star sign here" />
-  <input type="submit" value="save" />
+  <input type="submit" value="sumit" />
 </form>
-
-<h2>Your details are:</h2>
-<br> Name: {{name}}.
-<br> Email: {{email}}.
-<br> Star Sign: {{star_sign}}.
